--- a/style.css
+++ b/style.css
@@ -1,17 +1,48 @@
 @charset "UTF-8";
 
-
 body {
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: rgb(203, 228, 166);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(203, 228, 166);
 }
 
 form {
-    background-color: white;
-    height: 90%;
-    width: 380px;
-    border-radius: 20px;
+  background-color: white;
+  height: 90%;
+  width: 300px;
+  border-radius: 20px;
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+}
+
+h2 {
+  font-size: 18px;
+}
+
+.square {
+  margin: auto;
+  width: 90%;
+  height: 45px;
+  border: 1px solid grey;
+  border-radius: 10px;
+  display: flex;
+  align-items: center;
+}
+
+.squareCircle {
+  width: 15px;
+  height: 15px;
+  border: 1px solid grey;
+  border-radius: 10px;
+  margin: 0px 20px;
+}
+
+.radio {
+    margin-bottom: 10px;
+}
+
+#comment {
+  height: 200px;
 }
