--- a/style.css
+++ b/style.css
@@ -1,13 +1,15 @@
 @charset "UTF-8";
 
+@import url("https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200..800;1,200..800&display=swap");
+
 :root {
-  --cor1:hsl(148, 38%, 91%);
-  --cor2:hsl(169, 82%, 27%);
+  --cor1: hsl(148, 38%, 91%);
+  --cor2: hsl(169, 82%, 27%);
   --cor3: hsl(0, 66%, 54%);
   --cor4: hsl(0, 0%, 100%);
   --cor5: hsl(186, 15%, 59%);
   --cor6: hsl(187, 24%, 22%);
-  
+  --fonte: "Karla", sans-serif;
 }
 
 body {
@@ -15,6 +17,7 @@ body {
   justify-content: center;
   align-items: center;
   background-color: var(--cor1);
+  font-family: var(--fonte);
 }
 
 form {
@@ -31,10 +34,12 @@ form {
 
 h1 {
   color: var(--cor6);
+  margin-left: 12px;
 }
 
 h2 {
   font-size: 18px;
+  margin-left: 15px;
 }
 
 .square {
@@ -56,8 +61,16 @@ h2 {
 }
 
 .radio {
-    margin-bottom: 10px;
+  margin-bottom: 10px;
 }
+
+/*.squareCircle:checked + label {
+  background-color: red;
+}
+
+Não tem como utilizar isso para alterar a div principal. Vou mudar através do JS. Serve para treinar um pouco.
+*/
+
 
 #comment {
   height: 180px;
@@ -70,19 +83,35 @@ h2 {
   display: flex;
   width: 90%;
   margin: 20px auto;
-  font-size: 18px;
+  font-size: 16px;
 }
 
 #consentArea input {
   margin-right: 20px;
+  accent-color: var(--cor2);
 }
 
 #submit {
   background-color: var(--cor2);
   color: var(--cor4);
+  font-size: 16px;
 }
 
 .sinal {
   color: var(--cor2);
   font-size: 15px;
+}
+
+input:focus,
+textarea:focus {
+  box-shadow: 0 0 0 0;
+  border: 1px solid var(--cor2);
+  outline: 0;
+}
+
+input:hover,
+.radio:hover {
+  box-shadow: 0 0 0 0;
+  border: 1px solid var(--cor2);
+  outline: 0;
 }
