--- a/style.css
+++ b/style.css
@@ -127,6 +127,16 @@ input:hover,
   border: 2px solid red;
 }
 
+#send {
+  display: none;
+  position: absolute;
+  top: 50px;
+  background-color: var(--cor6);
+  border-radius: 10px;
+  color: white;
+  padding: 20px;
+}
+
 @media (min-width: 800px) {
   form {
     width: 30%;
