--- a/style.css
+++ b/style.css
@@ -120,7 +120,7 @@ input:hover,
 .erros {
   height: 1px;
   color: red;
-  margin-left: 10px;
+  margin-left: 20px;
 }
 
 .erroBorda {
@@ -135,6 +135,7 @@ input:hover,
   border-radius: 10px;
   color: white;
   padding: 20px;
+  width: 250px;
 }
 
 @media (min-width: 800px) {
@@ -188,6 +189,10 @@ input:hover,
 
   .erros {
     margin-left: 0;
+  }
+
+  #send {
+    width: 450px;
   }
 }
 
